Fixes #478: Bad contrast in dark mode

--- a/src/app/ui/components/sub-menu/sub-menu-item/sub-menu-item.component.scss
+++ b/src/app/ui/components/sub-menu/sub-menu-item/sub-menu-item.component.scss
@@ -7,8 +7,10 @@
     padding: 0 24px;
     border-bottom: 2px solid transparent;
     cursor: pointer;
+    color: var(--theme-secondary-text);
 }
 
 .sub-menu__selected-item {
     border-bottom: 2px solid var(--theme-accent-color);
+    color: var(--theme-primary-text);
 }
